--- a/lab06 example/public/index.html
+++ b/lab06 example/public/index.html
@@ -7,7 +7,7 @@
     <body>
         <div>
             <h1>Express - Basic Auth</h1>
-        <a href="/home">Home</a>
+        <a href="/list">Home</a>
         </div>
         
     </body>
